# highlevel-ai-lead-bridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260721_0001_initial_schema.py  20260721_0002_add_dead_letters.py
app/: __init__.py  main.py
app/api/: admin.py  health.py  webhooks.py
app/clients/: __init__.py  discord.py  highlevel.py  slack.py
app/core/: __init__.py  config.py  logging.py  privacy.py  request_limits.py  security.py
app/db/: base.py  models.py  repositories.py  session.py
app/domain/: __init__.py  events.py  leads.py  processed.py  summaries.py
app/providers/: base.py  mock.py  ollama_provider.py  openai_compatible.py  openai_provider.py
app/services/: event_processor.py  event_replay.py  fallback.py  highlevel_sync.py  lead_normalizer.py  notifier.py  summarizer.py
docs/: architecture.md  demo-script.md  deployment.md  highlevel-setup.md  security.md
examples/: duplicate_event.json  malformed_payload.json  new_lead.json
scripts/: send_sample_event.py
tests/: __init__.py  test_event_replay.py  test_hardening.py  test_health.py  test_highlevel_sync.py  test_notifier.py  test_providers.py  test_summarizer.py  test_webhooks.py
