[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "highlevel-ai-lead-bridge"
version = "0.1.0"
description = "A production-minded HighLevel lead-processing integration."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20,<1.0",
    "alembic>=1.14,<2.0",
    "asyncpg>=0.29,<1.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "pydantic-settings>=2.6,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "tenacity>=9.0,<10.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6,<8.0",
    "mypy>=1.13,<2.0",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "ruff>=0.8,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["app"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
